# platform-contracts

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cicd/: README.md  build.sh  pack.sh  run  utils.sh
contracts/: CMakeLists.txt
contracts/casino/: CMakeLists.txt
contracts/casino/include/casino/: casino.hpp  version.hpp.in
contracts/casino/src/: casino.cpp
contracts/events/: CMakeLists.txt  kiko
contracts/events/include/events/: events.hpp  version.hpp.in
contracts/events/src/: events.cpp
contracts/platform/: CMakeLists.txt
contracts/platform/include/platform/: platform.hpp  version.hpp.in
contracts/platform/src/: platform.cpp
env/: dev.env
tests/: CMakeLists.txt  basic_tester.hpp  casino_test.cpp  contracts.hpp.in  events_test.cpp  platform_test.cpp  test_symbol.hpp
